syntax = "proto3";
package quorum.pb;
option go_package = "github.com/rumsystem/quorum/internal/pkg/pb";

enum PackageType {
    TRX      = 0;
    BLOCK    = 1;
    SNAPSHOT = 2;
}

message Package {
    PackageType type = 1;
    bytes       Data = 2;
}

enum TrxType {
  POST               = 0; // post to group
  SCHEMA             = 2; // group schema
  PRODUCER           = 3; // update group producer
  ANNOUNCE           = 4; // self announce, producer or user)  
  REQ_BLOCK_FORWARD  = 5; // request next block 
  REQ_BLOCK_BACKWARD = 6; // request previous block
  REQ_BLOCK_RESP     = 7; // response request next block
  BLOCK_SYNCED       = 8; // block for producer to sync (old block)
  BLOCK_PRODUCED     = 9; // block for producer to merge (newly produced block)
  USER               = 10; // update group user
  ASK_PEERID         = 11; // ask owner/producer peerid
  ASK_PEERID_RESP    = 12; // response ask peerid
  CHAIN_CONFIG       = 13; // predefined chain configuration
  APP_CONFIG         = 14; // group app customized configuration
}

enum AnnounceType {
   AS_USER     = 0;
   AS_PRODUCER = 1;
   AS_USER_ENCRYPT  = 2;
}

enum ApproveType {
    ANNOUNCED = 0;
    APPROVED  = 1;
    REJECTED  = 2;
}

enum ActionType {
    ADD    = 0;
    REMOVE = 1;
}

enum TrxStroageType {
    CHAIN    = 0;
    CACHE = 1;
}

message Trx {
  string  TrxId        = 1;
  TrxType Type         = 2;    
  string  GroupId      = 3;
  bytes   Data         = 4; 
  int64   TimeStamp    = 5;
  string  Version      = 6;
  int64   Expired      = 7;
  int64   ResendCount  = 8;
  int64   Nonce        = 9;
  string  SenderPubkey = 10;  
  bytes   SenderSign   = 11;
  TrxStroageType StorageType = 12;
}

message Block {
    string   BlockId        = 1;
    string   GroupId        = 2;
	string   PrevBlockId    = 3;       
	bytes    PreviousHash   = 4;     
	repeated Trx Trxs       = 5; 
    string   ProducerPubKey = 6;   
	bytes    Hash           = 7;      
    bytes    Signature      = 8;
	int64    TimeStamp      = 9; 
}

message Snapshot {
    string   SnapshotId                 = 1;
    string   SnapshotPackageId          = 2;
    int64    TotalCount                 = 3;
    string   GroupId                    = 4;    
    int64    Nonce                      = 5;
    repeated SnapshotItem SnapshotItems = 6;
    string   SenderPubkey               = 7;
    bytes    Singature                  = 8;
    int64    TimeStamp                  = 9;
    int64    HighestHeight              = 10;
    string   HighestBlockId             = 11;
    bytes    ItemsHash                  = 12;
}

message SnapshotItem {
    string           SnapshotItemId = 1;
    SnapShotItemType Type           = 2;
    bytes            Data           = 3; 
}

enum SnapShotItemType {
	SNAPSHOT_APP_CONFIG   = 0;    //app_config item
	SNAPSHOT_CHAIN_CONFIG = 1;    //chain_config item
    SNAPSHOT_PRODUCER     = 2;    //producer item
    SNAPSHOT_USER         = 3;    //user item
    SNAPSHOT_ANNOUNCE     = 4;    //announce item
}

message SnapShotTag {
    int64  TimeStamp                  = 1;
    int64  HighestHeight              = 2;
    string HighestBlockId             = 3;
    bytes  ItemsHash                  = 4;
    int64  Nonce                      = 5;   
    string SnapshotPackageId          = 6;
    string SenderPubkey               = 7;
}

message BlockDbChunk {
    string   BlockId           = 1;
    Block    BlockItem         = 2;
    string   ParentBlockId     = 3;
    repeated string SubBlockId = 4;
    int64    Height            = 6;
}

message ReqBlock {
	string BlockId = 1; //block id
    string GroupId = 2; //group id
    string UserId  = 3; //requester
}

message BlockSynced {
    Block BlockItem = 1;
}

message AskPeerId {
    string GroupId     = 1;   
    string UserPeerId  = 2;
    string UserPubkey  = 3;
    string UserSign    = 4;
    string Memo        = 5;    
}

message AskPeerIdResp {
    string GroupId           = 1;   
    string RespPeerId        = 2;
    string RespPeerPubkey    = 3;
    string RespSign          = 4;
    bool   IsDirectConnected = 5;
}

message BlockProduced {
    Block BlockItem = 1;
}

enum ReqBlkResult {
	BLOCK_IN_TRX = 0;    //block data in trx
	BLOCK_NOT_FOUND = 1; //block not found
}

message ReqBlockResp {
    ReqBlkResult Result          = 1;
    string       ProviderPubkey  = 2;
    string       RequesterPubkey = 3;
    string       GroupId         = 4;  
    string       BlockId         = 5;    
    bytes        Block           = 6;
}

message PostItem {
    string TrxId           = 1;
	string PublisherPubkey = 2;
	bytes  Content         = 3;
	int64  TimeStamp       = 4;
}

message ProducerItem {
   string     GroupId             = 1;
   string     ProducerPubkey      = 2;
   string     GroupOwnerPubkey    = 3;   
   string     GroupOwnerSign      = 4;
   int64      TimeStamp           = 5;    
   ActionType Action              = 6;
   int64      BlockProduced       = 7;
   string     Memo                = 8;
}

message UserItem {
   string     GroupId             = 1;
   string     UserPubkey          = 2;
   string     EncryptPubkey       = 3;
   string     GroupOwnerPubkey    = 4;
   string     GroupOwnerSign      = 5;
   int64      TimeStamp           = 6;
   ActionType Action              = 7;
   string     Memo                = 8;
}

message AnnounceItem {
    string       GroupId            = 1;
    string       SignPubkey         = 2;
    string       EncryptPubkey      = 3;
    string       AnnouncerSignature = 4;
    AnnounceType Type               = 5;
    string       OwnerPubkey        = 6;
    string       OwnerSignature     = 7;
    ApproveType  Result             = 8;    
    int64        TimeStamp          = 9; 
    ActionType   Action             = 10;
    string       Memo               = 11;
}

message SchemaItem {
    string       GroupId          = 1;    
    string       GroupOwnerPubkey = 2;
    string       GroupOwnerSign   = 3;    
    string       Type             = 4;    
    string       Rule             = 5;
    int64        TimeStamp        = 6;    
    ActionType   Action           = 7;
}

enum GroupEncryptType {
    PUBLIC   = 0; //public group
    PRIVATE  = 1; //private group
}

enum GroupConsenseType {
    POA = 0;    //proof of authen
    POS = 1;
}

message GroupItem {
	string GroupId                 = 1;
	string GroupName               = 2;
	string OwnerPubKey             = 3;
    string UserSignPubkey          = 4;
    string UserEncryptPubkey       = 5;
	int64  LastUpdate              = 6;
	int64  HighestHeight           = 7;
	string HighestBlockId          = 8;
	Block  GenesisBlock            = 9;
    GroupEncryptType EncryptType   = 10;
    GroupConsenseType ConsenseType = 11;
    string CipherKey               = 12;
    string AppKey                  = 13;
}

enum RoleV0 {
    GROUP_PRODUCER = 0;
    GROUP_USER     = 1;
}

enum ChainConfigType {
    SET_TRX_AUTH_MODE = 0;
    UPD_DNY_LIST      = 1;
    UPD_ALW_LIST      = 2;
}

enum TrxAuthMode {
    FOLLOW_ALW_LIST = 0;
    FOLLOW_DNY_LIST = 1;
}

enum AuthListType {
    ALLOW_LIST = 0;
    DENY_LIST  = 1;
} 

message ChainConfigItem {
    string          GroupId        = 1;
    ChainConfigType Type           = 2;
    bytes           Data           = 3;
    string          OwnerPubkey    = 4;
    string          OwnerSignature = 5;
    int64           TimeStamp      = 6;       
    string          Memo           = 7; 
}

message ChainSendTrxRuleListItem {
    ActionType Action       = 1; 
    string     Pubkey       = 3;
    repeated   TrxType Type = 4;
}

message SetTrxAuthModeItem {
    TrxType     Type = 1;
    TrxAuthMode Mode = 2;
}

message GroupItemV0 {
	string GroupId                 = 1;
	string GroupName               = 2;
	string OwnerPubKey             = 3;
    string UserSignPubkey          = 4;
    string UserEncryptPubkey       = 5;
    RoleV0 UserRole                = 6;
	int64  LastUpdate              = 7;
	int64  HighestHeight           = 8;
	string HighestBlockId          = 9;
	Block  GenesisBlock            = 10;
    GroupEncryptType EncryptType   = 11;
    GroupConsenseType ConsenseType = 12;
    string CipherKey               = 13;
    string AppKey                  = 14;
}

enum AppConfigType {
    INT    = 0;
    BOOL   = 1;
    STRING = 2;
}

message AppConfigItem{
    string        GroupId     = 1;
    ActionType    Action      = 2;
    string        Name        = 3;
    AppConfigType Type        = 4;
    string        Value       = 5;
    string        OwnerPubkey = 6;
    string        OwnerSign   = 7;
    string        Memo        = 8;
    int64         TimeStamp   = 9;
}

message PSPing {
    int32 Seqnum        = 1;
    bool  IsResp        = 2;
    int64 TimeStamp     = 3;
    bytes Payload       = 4;
}

message GroupSeed {
	Block  GenesisBlock = 1;
	string GroupId  = 2;
	string GroupName = 3;
	string OwnerPubkey = 4;
	string ConsensusType  = 5;
	string EncryptionType = 6;
	string CipherKey = 7;
	string AppKey = 8;
	string Signature = 9;
}

